--- a/app/views/themes/waterfall/wine_details/add_step_one.html.erb
+++ b/app/views/themes/waterfall/wine_details/add_step_one.html.erb
@@ -1,5 +1,5 @@
 <div class="whitespace addwine">
-  <%= render "wine_details/addwine_step" %>
+  <%= render "wine_details/addwine_step", :step => "step_fir" %>
   <div class="search">
     <%= render :partial => "wine_details/search_wine", :object => @search %>
   </div>
