--- a/app/views/admin/wines_details/_form.html.erb
+++ b/app/views/admin/wines_details/_form.html.erb
@@ -114,12 +114,12 @@
         <tr>
           <td></td>
           <td>
-            <% @photo = @wines_detail.photos.blank? ? @wines_detail.photos.build(:album_id => 1,:category => 1, :is_cover => 1) : @wines_detail.photos.first %>
+            <% @photo = @wines_detail.photos.blank? ? @wines_detail.photos.build(:album_id => 1,:category => 1, :photo_type => APP_DATA["photo"]["photo_type"]["cover"]) : @wines_detail.photos.first %>
             <%= d.fields_for :photos, @photo do |photo| %>
                 <%= photo.file_field :image %>
                 <%= photo.hidden_field :album_id %>
                 <%= photo.hidden_field :category %>
-                <%= photo.hidden_field :is_cover %>
+                <%= photo.hidden_field :photo_type %>
             <% end %>
           </td>
         </tr>
