--- a/app/views/themes/waterfall/searches/winery.html.erb
+++ b/app/views/themes/waterfall/searches/winery.html.erb
@@ -28,7 +28,7 @@
       <li>
         <div class="logo">
           <a href="<%= url_for( '/winery/' + winery.id.to_s )%>">
-            <img src="<%= winery.logo_url(:thumb)%>" width="100" height="100" alt="<%= winery.name_en%>" />
+            <%= winery_label_tag(winery, :thumb_name => :thumb, :width => 100, :height => 100, :alt => winery.name_en) %>
           </a>
         </div>
         <div class="meta">
