--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -1,6 +1,6 @@
 <div class="winery_header">
    <div class="cover">
-     <%= image_tag(@winery.photos.where("is_cover = 1").first.image_url(:middle_x), :width => 360, :height => 320, :alt => @winery.name_en) if @winery.photos.where("is_cover = 1").first %>
+     <%= winery_cover_tag(@winery, :thumb_name => :middle_x, :width => 360, :height => 330, :alt => @winery.name_en) %>
    </div>
 
    <div class="info">
