feedback page update

--- a/public/template/feedback_login.html
+++ b/public/template/feedback_login.html
@@ -56,13 +56,13 @@
           <tr>
             <th>邮件地址</th>
             <td><label>
-              <input class="text content" type="text" name="textfield2" id="textfield2" />
+              <input name="textfield2" type="text" class="text content" id="textfield2" value="xiaoying@test.com" />
             </label></td>
           </tr>
           <tr>
-            <th>姓名</th>
+            <th>用户名</th>
             <td><label>
-              <input class="text content" type="text" name="textfield3" id="textfield3" />
+              <input name="textfield3" type="text" class="text content" id="textfield3" value="不良夏生" />
             </label></td>
           </tr>
           <tr>
