--- a/app/views/themes/waterfall/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/themes/waterfall/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,11 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>亲爱的iWine用户 <%= @resource.email %>：</p>
+<p>您在<%= @resource.reset_password_sent_at.to_s(:cn) %>提交了找回密码请求。请点击以下链接重置您的密码（链接24小时内有效） ：<br />
+<%= link_to '重置密码', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %><br />
+（如果您无法点击这个链接，请将此链接复制到浏览器地址栏后访问）
+</p>
 
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+<p>如果您没有提交找回密码请求，请忽略此邮件。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p>本邮件由系统自动发出，请勿回复。</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>iWine爱红酒</p>
