--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,14 @@
-<p>Welcome <%= @resource.email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>尊敬的用户：</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<p>您好！您于<%= @resource.created_at.to_s(:cn) %>注册iWine帐号，您的登录帐号为<%= @resource.email %></p>
+
+<p>点击以下链接，即可激活帐号。<br />
+	<%= link_to confirmation_url(@resource, :confirmation_token => @resource.confirmation_token), confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %>
+</p>
+<p>1、为了保障您帐号的安全性，请在 48小时内完成激活，此链接将在您激活过一次后失效！<br />
+	2、请尽快完成激活，否则过期（即<%= (@resource.created_at + 2.days).to_s(:cn) %>）后iWine将有权回收该帐号。
+</p>
+<p>若您没有注册过iWine帐号，请您忽略此邮件，此帐号将不会被激活，由此给您带来的不便请谅解。</p>
+
+<p>iWine爱红酒</p>
