--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -18,7 +18,7 @@
 		<% @comments.each do |comment| %>	
 		<li>
 			<div class="userpic">
-				 <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), :with_avatar => true, :avatar_version => :middle %>
+				 <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), {:with_avatar => true, :avatar_version => :middle}, {:width => 50, :height => 50} %>
 			</div>
 			<div class="main">
 				<div class="username">
@@ -83,10 +83,7 @@
 		  	<% end %>
 		  	
 			<div class="userpic">
-				<%= link_to_user @user,
-				user_path(@user),
-				:with_avatar => true,
-				:avatar_version => :middle %>      
+				 <%= link_to_user @user, user_path(@user, :trailing_slash => true), {:with_avatar => true, :avatar_version => :middle}, {:width => 50, :height => 50} %>     
 			</div>
 			<div class="post_main">
 				<div class="post">
