--- a/app/views/themes/waterfall/devise/confirmations/new.html.erb
+++ b/app/views/themes/waterfall/devise/confirmations/new.html.erb
@@ -1,12 +1,32 @@
-<h2>Resend confirmation instructions</h2>
-
+<div id="login">
+  <div class="password">
+    <div class="boxstyle2">
+      <div class="top"></div>
+      <div class="mid">
+        <h2>重发激活邮件</h2>
+        <!-- <h3>该链接已经失效。</h3> -->
+        <div class="clearfix">
+          <div class="un float_l">
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.submit "Resend confirmation instructions" %></div>
-<% end %>
-
-<%= render "links" %>
+                <%= f.email_field :email, :placeholder => "请输入邮箱地址", :class => "text" %>
+            <% end %>
+          </div>
+          
+          <%= link_to "javascript:void(0);", :class => "float_l ml10 save" do %>
+            <%= image_tag "/assets/waterfall/images/common/btn_submit.jpg", :alt => "登陆", :width => "96", :height => "41" %>
+          <% end %>
+        </div>
+        <div class="mt10">
+          <%= link_to "登陆", login_path %> |
+          <%= link_to "注册", register_path %>
+        </div>
+      </div>
+      <div class="bot"></div>
+    </div>
+  </div>
+</div>
+<script type="text/javascript">
+    $(".save").click(function(){
+        $(".new_user").submit();
+    });
+</script>
