--- a/app/views/themes/waterfall/static/feedback.html.erb
+++ b/app/views/themes/waterfall/static/feedback.html.erb
@@ -1,5 +1,43 @@
- <div class="whitespace">
- 	<%= title @title %>
- 	<p>Coming Soon...</p>
- 	<div class="clear"></div>
- </div>
+<% content_for :css do %>
+<%= theme_stylesheet_link_tag :about %>
+<% end %>	
+<div class="whitespace about">
+	<h1 class="main_title">意见反馈</h1>
+	<p>非常感谢您对爱红酒（iWine）的支持和关注，欢迎您在这里留下宝贵的意见和建议！也许我们不能一一回复，但我们会认真阅读，您的支持时我们最大的动力。</p>
+	<table class="feedback" width="90%" border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<th>标题</th>
+			<td><label>
+				<input class="text content" type="text" name="textfield" id="textfield" />
+			</label></td>
+		</tr>
+		<tr>
+			<th>内容</th>
+			<td><label>
+				<textarea name="textarea" id="textarea" cols="45" rows="5"></textarea>
+			</label></td>
+		</tr>
+		<tr>
+			<th>邮件地址</th>
+			<td><label>
+				<input class="text content" type="text" name="textfield2" id="textfield2" />
+			</label></td>
+		</tr>
+		<tr>
+			<th>姓名</th>
+			<td><label>
+				<input class="text content" type="text" name="textfield3" id="textfield3" />
+			</label></td>
+		</tr>
+		<tr>
+			<th>验证码</th>
+			<td><label>
+				<input class="text" type="text" name="textfield4" id="textfield4" />
+			</label></td>
+		</tr>
+		<tr>
+			<th>&nbsp;</th>
+			<td><a href="#" class="btn_gray_b"><span>提交</span></a></td>
+		</tr>
+	</table>
+</div>
