--- a/app/views/themes/waterfall/users/_sub_nav.html.erb
+++ b/app/views/themes/waterfall/users/_sub_nav.html.erb
@@ -33,7 +33,10 @@
     <div class="hp_info">
       <% if is_login_user? @user  # 如果用户登陆而且访问自己的页面 %>
       <div class="username"><%= @user.username %></div>
-      <div class="mystatu"><%= @user.profile.bio %> <span><a href="#">修改</a></span></div>
+      <div class="mystatu">
+        <%= @user.profile.bio %> 
+        <span><%= link_to "修改", basic_settings_path %></span>
+      </div>
       <div class="item">
         <%= link_to "私信", "/", :class => :icon_mail %> |
         <%= link_to "设置", basic_settings_path %>
@@ -44,16 +47,25 @@
        <div class="item">
         <% if user_signed_in? %>
             <% if (current_user.is_following @user) && (@user.is_following current_user) # 如果用户互相关注%>
-              <span class="icon_fol_e mr5">互相关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
+              <span class="icon_fol_e mr5">互相关注<span class="cancl_fol">
+                <%= link_to "(取消)", unfollow_friends_path(:user_id => @user.id) %>
+              </span></span>
             <% elsif current_user.is_following @user %>
-              <span class="icon_fol mr5">已关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
+              <span class="icon_fol mr5">已关注<span class="cancl_fol">
+                <%= link_to "(取消)", unfollow_friends_path(:user_id => @user.id) %>
+              </span></span>
             <% else %>
-              <a href="#" class="btn_gray"><span>加关注</span></a>
+            <%= link_to follow_friends_path(:user_id => @user.id ), :class => "btn_gray" do  %>
+              <span>加关注</span>
+              <% end %>
             <% end %>
         <% else %>  
-             <a href="#" class="btn_gray"><span>加关注</span></a>  
-             <%= link_to "私信", "/", :class => :icon_mail %> 
+              <%= link_to follow_friends_path(:user_id => @user.id ), :class => "btn_gray" do  %>
+              <span>加关注</span>
+              <% end %>
+             
         <% end %>
+        <%= link_to "私信", conversations_path(), :class => :icon_mail %> 
         </div> 
       <% end %>      
       <ul class="hp_navi">
