--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -28,7 +28,7 @@
        <% end %>
      </div>
 
-     <div class="logo"><%= image_tag(@winery.logo_url(:thumb), :width => 100, :height => 50, :alt => @winery.name_en) %></div>
+     <div class="logo"><%= image_tag(@winery.logo_url(:thumb), :width => 100, :height => 50, :alt => @winery.name_en) if @winery.logo.present? %></div>
      <h1 class="winery_name_ch"><%= @winery.name_zh %></h1>
      <h1 class="winery_name_en"><%= @winery.name_en %></h1>
      <div class="baseinfo">
