--- a/app/views/themes/waterfall/wine_details/share/_photos.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_photos.html.erb
@@ -6,7 +6,7 @@
 	<h2>
 		所有照片
 		<span class="font12 more">
-			<%= link_to "(共#{@wine_detail.photos_count}张...)", wine_photos_path(@wine_detail.id) %>
+			<%= link_to "(共#{@wine_detail.all_photo_counts}张...)", wine_photos_path(@wine_detail.id) %>
 		</span>
 	</h2>
 	<div class="clear"></div>
@@ -14,7 +14,7 @@
 <ul class="wine_img">
 	<% unless @photos.blank? %>
 	<% @photos.each do |photo| %>
-    <li><%= link_to image_tag(photo.image_url(:thumb_x), :width => 100, :height => 100), wine_photo_path(@wine_detail.id, photo.id) %></li>
+    <li><%= link_to image_tag(photo.image_url(:thumb_x), :width => 100, :height => 100), wine_photo_path(@wine_detail, photo.id) %></li>
   <% end %>
   <% else %>
 	 <li>暂时没有图片.</li>
