分享到第三方网站

--- a/app/views/themes/waterfall/share/_sns_icons.html.erb
+++ b/app/views/themes/waterfall/share/_sns_icons.html.erb
@@ -9,10 +9,10 @@
 <script type="text/javascript" >
     var jiathis_config={
         data_track_clickback:true,
-        url:"http://www.iwine.com",
-        summary:"专业的红酒社区",
-        title:"爱红酒，爱生活 #红酒#",
-        pic:"http://localhost:3000/assets/waterfall/images/common/logo.gif",
+        url:"<%= url %>",
+        summary:"<%= summary %>",
+        title:"<%= title %>",
+        pic:"<%= image_url %>",
         hideMore:false
     }
 </script>
