--- a/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
@@ -37,7 +37,11 @@
 				
 				<%= render :partial => 'liked' %>
 				
-				<%= render :partial => 'share/sns_icons' %>
+				<%= render 'share/sns_icons',
+                    :image_url => sns_image_url(@photo, :thumb_name => :large),
+                    :title => sns_title(@wine_detail.en_zh_name),
+                    :summary => "的图片",
+                    :url => request.url %>
 				
 				<div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
 			</div>
