--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -74,7 +74,11 @@
 
    <div class="right">
      <div class="share">
-       <%= render "share/sns_icons" %>
+       <%= render "share/sns_icons",
+                  :image_url => sns_image_url(@winery, :thumb_name => :middle_x),
+                  :title => sns_title(@winery.name),
+                  :summary => winery_summary(@winery),
+                  :url => request.url %>
        <div class="clear"></div>
      </div>
      <ul class="item">
