Update: Don't slideUp Comment list when reply comment.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/comments/reply.js.erb
+++ b/app/views/themes/waterfall/comments/reply.js.erb
@@ -6,8 +6,13 @@ $("#reply_comment_<%= @comment.id %>")
 $("#reply_comment_<%= @comment.id %> form")
 .bind("ajax:success", function(evt, data, status, xhr){
   self = this;
-  $(this).parent().parent().slideUp("slow", function(){
-});
+  // $(this).parent().parent().slideUp("slow", function(){});
+  // $(this).parent().children('.reply_list').slideUp("slow");
+  $(this).parent().children('.reply_list').slideDown("slow", function () {
+  	$(this).load("<%= children_comment_path(@comment.id) %>").slideDown("slow");
+  });
+
+
   $(this).parent().parent().parent()
   .children(".userful")
   .find("span.reply_comment_count").text("(" + data + ")") ;
