--- a/app/views/themes/waterfall/static/complement_feedbacks.html.erb
+++ b/app/views/themes/waterfall/static/complement_feedbacks.html.erb
@@ -13,7 +13,7 @@
       </li>
     </ul>
   </div>
-  <%= form_for @feedback, :url => feedbacks_path, :validate => true do |f| -%>
+  <%= form_for @feedback, :url => feedbacks_path do |f| -%>
   <table class="float_l" width="590" border="0" cellspacing="0" cellpadding="0">
     <tr>
       <th valign="top">主题</th>
