--- a/app/views/themes/waterfall/comments/_comment_reply_form.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_reply_form.html.erb
@@ -1,34 +1,32 @@
 <div class="top"></div>
 <div class="middle">
-<%= form_for @comment, :url =>  reply_comment_path(@comment), :remote => true, :method => :post do |f| -%>
+  <%= form_for @comment, :url =>  reply_comment_path(@comment), :remote => true, :method => :post do |f| -%>
   <table border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td class="td_1"><%= text_area_tag "comment[body]" %></td>
       <td class="td_2" valign="top"><%= image_submit_tag "v2/button/reply.png" %></td>
     </tr>
   </table>
-<% end -%>
+  <% end -%>
 
-<% if @comment.children.all.size > 0 %>
-<ul class="reply_list clearfix">
-
-  <% @comment.children.all.each do |comment| %>
-
-	<li>
+  <ul class="reply_list clearfix">
+  <% if @comment.children.all.size > 0 %>
+    <% @comment.children_and_order.each do |comment| %>
+    <li>
     	<div class="userpic">
-		  <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb %>
-			</div>
-        <div class="main">
-        	<div class="username">
-						<%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true) %>
-						<span class="date"><%= comment.created_at.to_s(:normal) %></span>
-					</div>
-            <div class="content"> <%= comment.body %></div>
-        </div>
+        <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb %>
+      </div>
+      <div class="main">
+         <div class="username">
+          <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true) %>
+          <span class="date"><%= comment.created_at.to_s(:normal) %></span>
+         </div>
+         <div class="content"> <%= comment.body %></div>
+      </div>
     </li>
-		 <% end %>
-		</ul>
-		<% end %>
+    <% end %>
+  <% end %>
+  </ul>
 <!-- middle end -->
 </div>
 
