--- a/app/views/themes/waterfall/wine_details/owners.html.erb
+++ b/app/views/themes/waterfall/wine_details/owners.html.erb
@@ -8,7 +8,7 @@
 			<span>返回</span>
 			<% end %>
 
-			<h1 class="wine_name_ch"><%= raw @wine_detail.cname %>的用有者</h1>
+			<h1 class="wine_name_ch"><%= raw @wine_detail.cname %>的拥有者</h1>
 			<div class="clear"></div>
 		</div>
       <%= render "wine_details/share/owners" %>
