cellar and recommend page update

--- a/public/template/cellar.html
+++ b/public/template/cellar.html
@@ -68,9 +68,19 @@
           </div>
           <div class="sort_search mb20">
               <div class="float_r"><a href="cellar_wine_add_search.html" class="btn_blue_b"><span>添加藏酒</span></a></div>
-              <div class="sort pt5">排序 <select name="">
-                <option>价格</option>
-                <option>数量</option>
+              <div class="sort pt5">年份 <select name="">
+                <option>从新到老</option>
+                <option>从老到新</option>
+              </select>
+              </div>
+              <div class="sort pt5">价格 <select name="">
+                <option>从高到低</option>
+                <option>从低到高</option>
+              </select>
+              </div>
+               <div class="sort pt5">购买时间 <select name="">
+                <option>从新到旧</option>
+                <option>从旧到新</option>
               </select>
               </div>
               <div class="search"><input class="text mr5 common_search" name="" type="text" /><a href="#" class="btn_gray"><span>搜索</span></a></div>
