--- a/public/template/recommend.html
+++ b/public/template/recommend.html
@@ -41,8 +41,8 @@
 <div class="paper wine">
             	<div class="top"></div>
                 <div class="mid">
-                	<ul class="line">
-                    	<li>
+                	<ul>
+                    	<li class="mb40">
                    	    	<img src="images/test/wine130.jpg" width="130" height="130" />
                         	<div class="meta">
                             	<h1 class="zh">2001拉菲珍宝</h1>
@@ -51,7 +51,7 @@
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <li>
+                        <li class="mb40">
                    	    	<img src="images/test/wine130_2.jpg" width="130" height="130" />
                         	<div class="meta">
                        	    <h1 class="zh">2001拉菲珍宝</h1>
@@ -60,7 +60,7 @@
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <li class="last">
+                        <li class="last mb40">
                    	    	<img src="images/test/wine130_3.jpg" width="130" height="130" />
                         	<div class="meta">
                        	    <h1 class="zh">2001拉菲珍宝</h1>
@@ -69,10 +69,7 @@
                                 <input name="" type="checkbox" value="" checked="checked" />
                             </div>
                         </li>
-                        <div class="clear"></div>
-                    </ul>
-                    <ul>
-                    	<li>
+                        <li>
                    	    	<img src="images/test/wine130_4.jpg" width="130" height="130" />
                         	<div class="meta">
                            	  <h1 class="zh">2001拉菲珍宝</h1>
@@ -101,7 +98,7 @@
                         </li>
                         <div class="clear"></div>
                     </ul>
-</div>
+                </div>
                 <div class="bot"></div>
             </div>
 <div class="paper user">
