--- a/app/assets/themes/waterfall/stylesheets/main.css
+++ b/app/assets/themes/waterfall/stylesheets/main.css
@@ -124,8 +124,9 @@ textarea.wine_intro {width:500px;height:200px;}
 #register .boxstyle .mid {padding:20px 28px;}
 #register p {font-size:13px;padding:0 0 5px 5px;}
 #register .location {padding-left:5px;}
-#register .submit {margin-top:20px;line-height:51px; overflow:hidden;}
+#register .submit {margin-top:20px;overflow:hidden;}
 #register .message {color:#C00;padding:10px 0 0 0;display:block;}
+#register span .message {padding:0;}
 .boxstyle2 {background:url(../images/bg/bg_box772_m.gif) repeat-y left top;}
 .boxstyle2 .top {background:url(../images/bg/bg_box772_t.gif) no-repeat left top;height:12px;}
 .boxstyle2 .mid {padding:20px 28px;}
