--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -42,7 +42,7 @@
             <div class="info">
               <div class="like float_r"><%= link_to "赞(#{@photo.votes_count})", "#", :class => "icon_like" %></div>
               <div class="share float_r">
-                <%= render "share/sns_icons",
+                <%= render "share/sns_icons_second",
                    :image_url => sns_image_url(@photo, :thumb_name => :large),
                    :title => sns_title(@winery.name),
                    :summary => "的图片",
