--- a/app/views/themes/waterfall/users/_sub_nav.html.erb
+++ b/app/views/themes/waterfall/users/_sub_nav.html.erb
@@ -38,7 +38,7 @@
         <span><%= link_to "修改", basic_settings_path %></span>
       </div>
       <div class="item">
-        <%= link_to "私信", "/", :class => :icon_mail %> |
+        <%= link_to "私信", conversations_path, :class => :icon_mail %> |
         <%= link_to "设置", basic_settings_path %>
       </div>
       <% else %>
