--- a/app/views/themes/waterfall/users/start.html.erb
+++ b/app/views/themes/waterfall/users/start.html.erb
@@ -7,13 +7,19 @@
   <div class="paper wine">
    <div class="top"></div>
    <div class="mid">
-     <ul class="line">
-      <% @hot_wines.each do |wine_detail| %>
-      <li>
+     <ul>
+      <% @hot_wines.each_with_index do |wine_detail, index| %>
+      <% if (index + 1) % 3 == 0 %>
+      <li class="mb40 last">
+      <% else %>
+      <li class="mb40">
+      <% end %>
+      <%= link_to wine_path(wine_detail) do %>
        <%= wine_cover_tag wine_detail, :thumb_name => :thumb, :size => "130x130" %>
+      <% end %>
        <div class="meta">
-         <h1 class="zh"><%= wine_detail.cname %></h1>
-         <h1 class="en"><%= wine_detail.ename %></h1>
+         <h1 class="zh"><%= link_to wine_detail.cname, wine_path(wine_detail) %></h1>
+         <h1 class="en"><%= link_to wine_detail.ename, wine_path(wine_detail) %></h1>
          <span class="gray"><%= wine_detail.wine.style.name_zh %></span>
         <%= check_box_tag "wine_detail_ids[]", wine_detail.id, true  %> 
        </div>
@@ -28,8 +34,12 @@
  <div class="top"></div>
  <div class="mid">
   <ul>
-    <% @recommend_users.each do |user| %>
+    <% @recommend_users.each_with_index do |user, index| %>
+    <% if (index+1) % 5 == 0 %>
+    <li class="last">
+    <% else %>
     <li>
+    <% end %>
       <%= link_to_user user, 
       user_path(user.id,:trailing_slash => true), 
       {:with_avatar => true, :avatar_version => :large}, 
