Update: Make the Waterfall is center
http://masonry.desandro.com/docs/options.html
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= theme_javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield :css %>
-    <%= yield :j %>
+    <%= yield :js %>
   </head>
   <body>
     <div id="header">
