--- a/app/views/themes/waterfall/home/index.html.erb
+++ b/app/views/themes/waterfall/home/index.html.erb
@@ -2,25 +2,12 @@
 <%= theme_stylesheet_link_tag :home %>
 <% end %>
 
-<div id="container" style="position: relative; ">
+<div id="container" >
 <%= render "timeline" %>
 <div style="display: none">
 <%= paginate @timelines %>
 </div>
 <div class="clear"></div>
 </div>
-<script type="text/javascript">
-$('#container').masonry({
-		itemSelector: '.item',
-		resizeable: true
-	}).on('mouseenter', 'div.gulu', function(){
-		$(this).addClass('ghover');
-	}).on('mouseleave', 'div.gulu', function(){
-		$(this).removeClass('ghover');
-	});
-	setTimeout(function(){
-		$('#container').masonry();
-	}, 200);
-
-</script>
+<%= render "layouts/waterfall_js" %>
 
