--- a/app/views/themes/waterfall/wine_details/index.html.erb
+++ b/app/views/themes/waterfall/wine_details/index.html.erb
@@ -10,18 +10,4 @@
 <div class="clear"></div>
 </div>
 
-<script type="text/javascript">
-$('#container').masonry({
-		itemSelector: '.item',
-		resizeable: true
-	}).on('mouseenter', 'div.gulu', function(){
-		$(this).addClass('ghover');
-	}).on('mouseleave', 'div.gulu', function(){
-		$(this).removeClass('ghover');
-	});
-	// setTimeout(function(){
-	// 	$('#container').masonry();
-	// }, 200);
-
-</script>
-
+<%= render "layouts/waterfall_js" %>
