--- a/app/views/themes/waterfall/comments/_comment_reply_form.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_reply_form.html.erb
@@ -14,7 +14,11 @@
     <% @comment.children_and_order.each do |comment| %>
     <li>
     	<div class="userpic">
-        <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb %>
+        <%= link_to_user comment.user, 
+                         user_path(comment.user, 
+                         :trailing_slash => true), 
+                         {:with_avatar => true, :avatar_version => :thumb},
+                         {:size => "50x50"} %>
       </div>
       <div class="main">
          <div class="username">
