--- a/app/views/themes/waterfall/comments/children.js.erb
+++ b/app/views/themes/waterfall/comments/children.js.erb
@@ -2,7 +2,10 @@
 <% @children.each do |comment| %>
 <li>
  <div class="userpic">
-  <%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb %>
+  <%= link_to_user comment.user, 
+  								 user_path(comment.user, :trailing_slash => true), 
+  								 {:with_avatar => true, :avatar_version => :thumb},
+  								 {:size => "50x50"} %>
 </div>
 <div class="main">
  <div class="username">
